# advent-of-code-2015

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md
day-1/go/: BUILD.bazel  main.go
day-1/go/solution/: BUILD.bazel  not_quite_lisp.go
day-1/rust/: Cargo.toml
day-1/rust/src/: main.rs
day-1/rust/src/solution/: mod.rs  not_quite_lisp.rs
day-2/go/: BUILD.bazel  main.go
day-2/go/model/: BUILD.bazel  dimension.go
day-2/go/solution/: BUILD.bazel  wrapping_paper.go
day-2/rust/src/: main.rs
day-2/rust/src/solution/: mod.rs  wrapping_paper.rs
day-2/rust/src/solution/model/: dimension.rs
day-3/go/: BUILD.bazel  README.md  main.go
day-3/go/constants/: BUILD.bazel  direction.go
day-3/go/model/: BUILD.bazel  coordinate.go
day-3/go/solution/: BUILD.bazel  house_visits.go
go_libs/: BUILD.bazel  README.md
go_libs/file_processor/: BUILD.bazel  lib.go  lib_test.go
rust_libs/file_processor/: Cargo.toml
rust_libs/file_processor/src/: lib.rs
