###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
module(name = "advent-of-code-2015")

# Go rules
bazel_dep(name = "gazelle", version = "0.47.0") # https://registry.bazel.build/modules/gazelle
bazel_dep(name = "rules_go", version = "0.59.0") # https://registry.bazel.build/modules/rules_go
