load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "not_quite_lisp",
    srcs = ["solution/not_quite_lisp.go"],
    importpath = "github.com/justint-rl/advent-of-code-2015/day-1/not_quite_lisp",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "day-1",
    data = glob(["input/*.txt"]),  # glob() specificies collection of files based on pattern
    embed = [":go_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_lib",
    srcs = ["main.go"],
    importpath = "github.com/justint-rl/advent-of-code-2015/day-1/go",
    visibility = ["//visibility:private"],
    deps = [":not_quite_lisp"],
)
